[package]
name = "sched"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["serde"] }
mongodb = { version = "1.1.1", default-features = false, features = ["sync"], optional = true }
bson = { version = "1.1.0", optional = true }
sled = { version = "0.34.6", optional = true }
bincode = { version = "*", optional = true }
rustyline = "6.3.0"
serde = "1.0.116"
serde_json = "*"
serde_derive = "1.0.116"
lazy_static = "1.4.0"
dirs = "3.0.1"
regex = "1.3.9"
gluon = { git = "https://github.com/gluon-lang/gluon", features = ["serialization"] }
gluon_codegen = { git = "https://github.com/gluon-lang/gluon" } #"0.17.2"
clap = "2.33.3"

app_dirs = "1.2.1"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["rt-threaded", "rt-core", "macros", "signal"] }
codespan = "0.9.5"
codespan-reporting = "0.9.5"
ansi_term = "0.12.1"

[features]
default = ["kv"]
mongo = ["mongodb", "bson"]
kv = ["sled"]
