[package]
name = "sched"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = { version = "0.4.15", features = ["serde"] }
sled = { version = "0.34.6" }
rustyline = "6.3.0"
serde = "1.0.116"
serde_json = "*"
serde_derive = "1.0.116"
lazy_static = "1.4.0"
dirs = "3.0.1"
regex = "1.3.9"
gluon = { path = "../gluon", features = ["serialization"] }
gluon_codegen = { path = "../gluon/codegen" } #"0.17.2"
gluon_completion = { path = "../gluon/completion" } #"0.17.2"
clap = "2.33.3"
thiserror = "*"

app_dirs = "1.2.1"
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["rt-threaded", "rt-core", "macros", "signal"] }
codespan = "0.9.5"
codespan-reporting = "0.9.5"
termion = "*"

[build-dependencies]
walkdir = "2"
