[package]
name = "sked"
version = "0.1.0"
authors = ["crides <zhuhaoqing@live.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
chrono = { version = "^0.4", features = ["serde"] }
sled = { version = "^0.34" }
rustyline = "^8"
serde = "^1"
serde_json = "*"
serde_derive = "^1"
lazy_static = "^1"
dirs = "^3"
regex = "^1"
gluon = { path = "../gluon", features = ["serialization"], optional = true }
gluon_codegen = { path = "../gluon/codegen", optional = true } #"0.17.2"
gluon_completion = { path = "../gluon/completion", optional = true } #"0.17.2"
clap = "^2"
thiserror = "*"
smallvec = "1.6"
derive-new = "*"

app_dirs = { package = "app_dirs2", version = "^2" }
futures = "^0.3"
tokio = { version = "^0.2", features = ["full", "rt-threaded"] }
codespan = "^0"
codespan-reporting = "^0"
termion = "^1"
notify-rust = "^4"

paste = "^1"

[build-dependencies]
walkdir = "2"

[features]
scripting = ["gluon", "gluon_codegen", "gluon_completion"]
repl = ["scripting"]
